--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "@vuepic/vue-datepicker": "^3.5.3",
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.23.1",
+    "vue": "^3.2.45",
+    "vue-date-pick": "^1.5.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
