--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.5.3",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "vue": "^3.2.45",
-    "vue-date-pick": "^1.5.1"
+    "vue-date-pick": "^1.5.1",
+    "vue-excel-xlsx": "^1.0.3",
+    "vue-router": "^4.1.6",
+    "vue3-excel-editor": "^1.0.17"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
