--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "read-excel-file": "^5.5.3",
+    "router": "^1.3.7",
     "vue": "^3.2.45",
     "vue-date-pick": "^1.5.1",
     "vue-excel-xlsx": "^1.0.3",
